--- a/.classpath
+++ b/.classpath
@@ -22,14 +22,15 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_20">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_45">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v6.0"/>
-	<classpathentry kind="lib" path="F:/spark/openfire/lib/openfire.jar"/>
+	<classpathentry kind="lib" path="F:/spark/openfire/lib/openfire.jar" sourcepath="F:/spark/sources/openfire/src/java"/>
 	<classpathentry kind="lib" path="src/lib/jackson-core-asl-1.0.0.jar"/>
 	<classpathentry kind="lib" path="src/lib/jackson-mapper-asl-1.0.0.jar"/>
+	<classpathentry kind="lib" path="src/lib/javax.servlet-api-3.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
