--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 #tomcat home
 tomcat.home=D\:/Server/apache-tomcat-5.5.29
-webapp.path=E\:/Dev/cms/chat-log
+webapp.path=F:/Dev/work/chat-log-plugin
  
 plugin.name=chatlog
-plugin.path=E\:/Dev/cms/chat-log/src/main/java
+plugin.path=F:/Dev/work/chat-log-plugin/src/main/java
